added bg and title logo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="Asset 5@2x.png" type="image/icon">
     <title>AlgoZenith NIT Calicut Inductions</title>
     <style>
         body {
-            background: url('#');
+            height: 100vh;
+            width: 100vw;
+            background: url(Asset\ 4@2x.png);
             background-size: cover;
+            background-position: center;
+            overflow: hidden;
         }
         .container {
             display: flex;
@@ -37,15 +44,16 @@
 </head>
 <body>
     <div class="container">
+        <a href="https://forms.gle/K3Toz12r9mS7rBhF7" target="_blank" class="box">
+            <h3>DSA and CP Role</h3>
+        </a>
         <a href="https://forms.gle/HyxwUf36BjFqUnaA7" target="_blank" class="box">
             <h3>Graphic Designer Role</h3>
         </a>
         <a href="https://forms.gle/iuHZsdaVriGWgHSCA" target="_blank" class="box">
             <h3>Social Media Handling Role</h3>
         </a>
-        <a href="https://forms.gle/K3Toz12r9mS7rBhF7" target="_blank" class="box">
-            <h3>DSA and CP Role</h3>
-        </a>
+       
     </div>
 </body>
 </html>
