changed font family

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Asset 5@2x.png" type="image/icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <title>AlgoZenith NIT Calicut Inductions</title>
     <style>
         body {
+            font-family: 'Poppins', sans-serif;
             height: 100vh;
             width: 100vw;
             background: url(Asset\ 4@2x.png);
@@ -14,6 +20,7 @@
             background-position: center;
             overflow: hidden;
         }
+
         .container {
             display: flex;
             justify-content: space-around;
@@ -24,7 +31,7 @@
         .box {
             background-color: #e0e0e0; 
             color: #333; 
-            border: 1px solid #000;
+            border: 1px solid #838383;
             border-radius: 5px;
             margin: 10px;
             padding: 20px;
@@ -32,7 +39,7 @@
             text-align: center;
         }
         .box:hover {
-            background-color: #ddd;
+            background-color: #ceceff;
             cursor: pointer;
         }
         @media (max-width: 600px) {
@@ -43,17 +50,17 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="https://forms.gle/K3Toz12r9mS7rBhF7" target="_blank" class="box">
-            <h3>DSA and CP Role</h3>
-        </a>
-        <a href="https://forms.gle/HyxwUf36BjFqUnaA7" target="_blank" class="box">
-            <h3>Graphic Designer Role</h3>
-        </a>
-        <a href="https://forms.gle/iuHZsdaVriGWgHSCA" target="_blank" class="box">
-            <h3>Social Media Handling Role</h3>
-        </a>
-       
-    </div>
+        <div class="container">
+            <a href="https://forms.gle/K3Toz12r9mS7rBhF7" target="_blank" class="box">
+                <h3>DSA and CP Role</h3>
+            </a>
+            <a href="https://forms.gle/HyxwUf36BjFqUnaA7" target="_blank" class="box">
+                <h3>Graphic Designer Role</h3>
+            </a>
+            <a href="https://forms.gle/iuHZsdaVriGWgHSCA" target="_blank" class="box">
+                <h3>Social Media Handling Role</h3>
+            </a>
+        
+        </div>
 </body>
 </html>
